2002-04-24  Elena Zannoni  <ezannoni@redhat.com>

	* dwarf2.h: Add DW_AT_GNU_vector.

2002-02-13  Matt Fredette  <fredette@netbsd.org>

	* m68k.h (EF_M68000): Define.

2002-02-12  Alan Modra  <amodra@bigpond.net.au>

	* ppc.h (DT_PPC64_OPD, DT_PPC64_OPDSZ): Define.

2002-02-09  Richard Henderson  <rth@redhat.com>

	* alpha.h (R_ALPHA_BRSGP): New.

2002-02-08  Alexandre Oliva  <aoliva@redhat.com>

	Contribute sh64-elf.
	2002-01-23  Alexandre Oliva  <aoliva@redhat.com>
	* sh.h (R_SH_GOTPLT32, R_SH_GOT_LOW16, R_SH_GOT_MEDLOW16,
	R_SH_GOT_MEDHI16, R_SH_GOT_HI16, R_SH_GOTPLT_LOW16,
	R_SH_GOTPLT_MEDLOW16, R_SH_GOTPLT_MEDHI16, R_SH_GOTPLT_HI16,
	R_SH_PLT_LOW16, R_SH_PLT_MEDLOW16, R_SH_PLT_MEDHI16,
	R_SH_PLT_HI16, R_SH_GOTOFF_LOW16, R_SH_GOTOFF_MEDLOW16,
	R_SH_GOTOFF_MEDHI16, R_SH_GOTOFF_HI16, R_SH_GOTPC_LOW16,
	R_SH_GOTPC_MEDLOW16, R_SH_GOTPC_MEDHI16, R_SH_GOTPC_HI16,
	R_SH_GOT10BY4, R_SH_GOTPLT10BY4, R_SH_GOT10BY8,
	R_SH_GOTPLT10BY8, R_SH_COPY64, R_SH_GLOB_DAT64, R_SH_JMP_SLOT64,
	R_SH_RELATIVE64): New relocs.
	(R_SH_FIRST_INVALID_RELOC_4): Adjust.
	2001-05-16  Alexandre Oliva  <aoliva@redhat.com>
	* sh.h: Renumbered and renamed some SH5 relocations to match
	official numbers and names; moved unmaching ones to the range
	0xf2-0xff.
	2001-01-06  Hans-Peter Nilsson  <hpn@cygnus.com>
	* sh.h (sh64_get_contents_type): Declare.
	(sh64_address_is_shmedia): Likewise.
	2000-12-30  Hans-Peter Nilsson  <hpn@cygnus.com>
	* sh.h (sh64_elf_crange): New type.
	(struct sh64_section_data): New.
	(sh64_elf_section_data): New macro.
	(EF_SH5): Rename back from EF_SH64.
	2000-12-18  Hans-Peter Nilsson  <hpn@cygnus.com>
	* sh.h (SHF_SH5_ISA32_MIXED, SHT_SH5_CR_SORTED,
	SH64_CRANGES_SECTION_NAME, SH64_CRANGE_SIZE,
	SH64_CRANGE_CR_ADDR_OFFSET, SH64_CRANGE_CR_SIZE_OFFSET,
	SH64_CRANGE_CR_TYPE_OFFSET): New macros.
	2000-12-12  Hans-Peter Nilsson  <hpn@cygnus.com>
	* sh.h (EF_SH64): Don't define EF_SH64_ABI64.
	2000-11-27  Hans-Peter Nilsson  <hpn@cygnus.com>